--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <div class="jumbotron"></div>
     <div class="conteiner">
       <div class="top"></div>
+      <!-- SECTION WITH FLOAT COMMAND -->
       <div class="second-container clearfix">
         <aside></aside>
         <main></main>
         <aside></aside>
       </div>
+      <!-- FINE -->
     </div>
     <footer></footer>
   </div>
