add img link and a few selector

--- a/index.html
+++ b/index.html
@@ -9,19 +9,53 @@
 </head>
 <body>
   <div class="global">
-    <header></header>
+    <header>
+      <img id="logo" src="../img/logo.svg" alt="">
+    </header>
     <div class="jumbotron"></div>
     <div class="conteiner">
-      <div class="top"></div>
+      <div class="top"><h1>Wall Street go down</h1></div>
       <!-- SECTION WITH FLOAT COMMAND -->
       <div class="second-container clearfix">
-        <aside></aside>
-        <main></main>
-        <aside></aside>
+        <aside>
+          <ul><h3>lorem</h3>
+            <li> <a href="www.google.it">ipsum </a> </li>
+            <li> <a href="www.google.it">ipsum  </a></li>
+            <li> <a href="www.google.it">ipsum </a></li>
+            <li> <a href="www.google.it">ipsum </a></li>
+            <li> <a href="www.google.it">ipsum  </a></li>
+            <li> <a href="www.google.it">ipsum </a></li>
+            <li> <a href="www.google.it">ipsum </a></li>
+            <li> <a href="www.google.it">ipsum </a></li>
+            <li> <a href="www.google.it">ipsum </a></li>
+            <li> <a href="www.google.it">ipsum </a></li>
+            <li> <a href="www.google.it">ipsum </a></li>
+            <li> <a href="www.google.it">ipsum </a></li>
+           
+          </ul>
+        </aside>
+        <main>
+          <img class="tim1"src="../img/tim-1.jpg" alt="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis nostrum quaerat et consectetur ab cupiditate pariatur, suscipit, nesciunt ea unde eos laboriosam modi recusandae alias aliquid ad eum. Iusto distinctio a architecto maiores laboriosam sequi vel omnis, eos recusandae ullam similique. Et quibusdam vero ea saepe! Numquam sequi modi enim dicta a! A fugiat unde quam quidem repudiandae iste reiciendis! Dolore qui excepturi dolorem, quasi error, aliquam sapiente magnam repudiandae fugiat iste, est quaerat nemo numquam? Unde rem dolorem labore, suscipit libero sequi doloremque numquam, aut tempore corrupti possimus impedit nam enim eius, ad magni alias dolorum ex officia provident. Voluptatem labore dicta dolorem. Molestiae debitis nemo laudantium necessitatibus<img class="tim2"src="../img/tim-2.jpg" alt=""> explicabo et. Consectetur animi quod quo est iure. Deserunt nihil doloribus dicta ipsum earum ipsa in? Commodi libero, iste et consectetur harum quas ut. Provident vero eos rem nihil iusto temporibus ut asperiores, inventore voluptas excepturi voluptate non est enim odit repudiandae omnis hic cum quo culpa et ullam! Cum, quasi molestias assumenda voluptas ad voluptatum architecto itaque odio libero. Earum aliquam non tempore iusto nihil doloremque sunt perspiciatis? Deleniti modi consequatur exercitationem vero doloremque recusandae, suscipit inventore laudantium animi sint, eius provident hic obcaecati iure quisquam repudiandae earum impedit dignissimos?
+        </main>
+        <aside class="info">
+          <form action="">
+            <div>NameID</div><br><input type="text" placeholder=" Luca123" size="15">
+            <div>Email</div><br><input type="email" placeholder="Luca@gmail.com" size="15">
+            <div>Password</div><br><input type="password" maxlength="8"  size="15"><br>
+            <input type="submit" value="invia"><br>
+            <div ><a href="www.google.it">Hai dimenticato la password?</a></div>
+            
+          </form>
+        </aside>
       </div>
       <!-- FINE -->
     </div>
-    <footer></footer>
+    <footer >
+      <img  src="../img/pexels-bill-emrich-230794-2.jpg" alt="london">
+      <img  src="../img/pexels-bill-emrich-230794-1.jpg" alt="london">
+      <img  src="../img/pexels-bill-emrich-230794-0.jpg" alt="london">
+      <div>credits :<a href="www.google.it">Studio36</a> </div>
+    </footer>
   </div>
 </body>
 </html>
